Work for #2979: fix translation alignment for properties with big title

--- a/packages/survey-creator-core/src/components/tabs/translation.scss
+++ b/packages/survey-creator-core/src/components/tabs/translation.scss
@@ -92,6 +92,7 @@
   color: $foreground;
 
   span {
+    display: inline-block;
     padding-left: calcSize(3);
   }
 }
